--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "postcss": "^8.4.35",
     "postcss-custom-properties": "^13.3.4",
     "sass": "^1.70.0"
+  },
+  "dependencies": {
+    "sharp": "^0.33.2"
   }
 }
