--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "author": "Dania",
   "license": "ISC",
+  
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
@@ -29,9 +30,7 @@
     "parcel-bundler": "^1.12.4",
     "postcss": "^8.4.35",
     "postcss-custom-properties": "^13.3.4",
-    "sass": "^1.70.0"
-  },
-  "dependencies": {
-    "sharp": "^0.33.2"
+    "sass": "^1.70.0",
+    "sharp": "^0.31.1"
   }
 }
